tests/reject/where_numeric.hi
fn sm(xs: [$T]) -> $T where numeric(T):
    return xs[0] + xs[0]

fn main():
    println(sm(["a", "b"]))
